# random-jojo-quotes

./: Cargo.toml
migrations/: 20231208054015_add_quotes_table.sql
src/: main.rs
