[package]
name = "random-jojo-quotes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde = "1.0.193"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-secrets = "0.35.0"
shuttle-shared-db = { version = "0.35.0", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["macros"] }
tokio = "1.28.2"
tracing = "0.1.40"
