[package]
edition = "2021"
name = "random-jojo-quotes"
version = "0.1.0"

[dependencies]
axum = "0.7.3"
serde = "1.0.193"
shuttle-axum = "0.42.0"
shuttle-runtime = "0.42.0"
shuttle-secrets = "0.42.0"
shuttle-shared-db = {version = "0.42.0", features = ["postgres","sqlx"]}
sqlx = "0.7.3"
tokio = "1.28.2"
tracing = "0.1.40"
